Implementation of stage 1